# Wildfire-Suppression

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  environment.yml
cmake/: FindGUROBI.cmake
dissertation/experimental_data/literature_instances/: benchmark.csv  fire_perimeter.csv  mip.csv
dissertation/experimental_data/new_instances/: bkv.csv  instance_size.csv  suppression_capacity.csv
experimental_data/literature_instances/: opt.csv  transition_instant.csv
experimental_data/new_instances/: bklb.csv  environmental_factors.csv  release_window.csv
scripts/: instance_generation.py  simple_model.py  visualize_solution.py
src/: common.hpp  main.cpp
src/algorithm/: algorithm.hpp  beam_search.hpp  cut_heuristic.hpp  mip.hpp  random_search.hpp
src/model/: basic_model.hpp  cut_model.hpp  general_model.hpp  model.hpp
src/problem/: digraph.hpp  instance.hpp  solution.hpp
src/util/: clock.hpp  heap.hpp  parameters.hpp
